--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,9 +13,13 @@
     </nav>
   </div>
 
-  <div class="home__products">
-    <ng-container *ngFor="let product of products$ | async;">
+  <div class="home__products" *ngIf="products$ | async as products; else loading">
+    
+    <ng-container *ngFor="let product of products$ | async">
       <app-card [image]='product.image' [name]="product.name" [price]="product.price" [isSelect]="isSelected(product)" (click)="onClick(product)"></app-card>
     </ng-container>
   </div>
+  <ng-template #loading>
+    <ng-lottie [options]="options"></ng-lottie>
+  </ng-template>
 </section>
