Finish unit test

--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -4,6 +4,7 @@
   [ngStyle]="{
     'background-image': 'url(' + image + ')'
   }"
+  data-testid="card"
 >
   <h1>{{ name }}</h1>
   <p>{{ price }} pts</p>
