--- a/src/styles/__variables.scss
+++ b/src/styles/__variables.scss
@@ -1,10 +1,10 @@
-$orange: #FFC225;
-$orangeDark: #FF872C;
+$orange: #ffc225;
+$orangeDark: #ff872c;
 $blue: #172860;
-$black: #363F5F;
+$black: #363f5f;
 $gray: #999999;
-$grayText: #8E8E8E;
-$grayBorder: #DDDDDD;
+$grayText: #8e8e8e;
+$grayBorder: #dddddd;
 $grayInput: rgba(178, 178, 178, 0.0409473);
 
 $title: prem(30);
