--- a/src/app/pages/auth/login-in/login-in.component.html
+++ b/src/app/pages/auth/login-in/login-in.component.html
@@ -1,20 +1,34 @@
 <section class="login">
-    <div>
-        <div class="login__presentation">
-            <h1>Dotz</h1>
-            <p>Controle seus pontos de forma muito simples</p>
-        </div>
-    
-      <form class="login__form" [formGroup]="loginForm">
-          <input class="input" type="email" placeholder="Email"  formControlName="email"/>
-          <input class="input" type="password" placeholder="Senha" formControlName="password"/>
-          <div class="login__form__buttons">
-              <app-button buttonType="submit" (click)="onSubmit()"> Entrar </app-button>
-              <div>
-                  <span>Ainda não é cadastrado?</span>
-                  <app-button routerLink="/auth/signin" type="flat" buttonType="button"> Criar uma conta </app-button>
-              </div>
-          </div>
-      </form>
+  <div>
+    <div class="login__presentation">
+      <h1>Dotz</h1>
+      <p>Controle seus pontos de forma muito simples</p>
     </div>
+
+    <form class="login__form" [formGroup]="loginForm">
+      <input
+        class="input"
+        type="email"
+        placeholder="Email"
+        formControlName="email"
+      />
+      <input
+        class="input"
+        type="password"
+        placeholder="Senha"
+        formControlName="password"
+      />
+      <div class="login__form__buttons">
+        <app-button buttonType="submit" (click)="onSubmit()">
+          Entrar
+        </app-button>
+        <div>
+          <span>Ainda não é cadastrado?</span>
+          <app-button routerLink="/auth/signin" type="flat" buttonType="button">
+            Criar uma conta
+          </app-button>
+        </div>
+      </div>
+    </form>
+  </div>
 </section>
